tests/ui/resolve/issue-100365.stderr
error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:2:16
   |
LL |     let addr = Into::<std::net::IpAddr>.into([127, 0, 0, 1]);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:6:13
   |
LL |     let _ = Into.into(());
   |             ^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:10:13
   |
LL |     let _ = Into::<()>.into;
   |             ^^^^^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found trait `std::iter::Iterator`
  --> $DIR/issue-100365.rs:17:9
   |
LL | / macro_rules! Trait {
LL | |     () => {
LL | |         ::std::iter::Iterator
   | |         ^^^^^^^^^^^^^^^^^^^^^ not a value
LL | |
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `Trait!`
...
LL |       Trait!().map(std::convert::identity); // no `help` here!
   |       -------- in this macro invocation

error[E0423]: expected value, found trait `std::iter::Iterator`
  --> $DIR/issue-100365.rs:17:9
   |
LL | / macro_rules! Trait {
LL | |     () => {
LL | |         ::std::iter::Iterator
   | |         ^^^^^^^^^^^^^^^^^^^^^ not a value
LL | |
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `Trait!`
...
LL |       Trait!().map; // no `help` here!
   |       -------- in this macro invocation

error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:25:9
   |
LL | / macro_rules! create {
LL | |     () => {
LL | |         Into::<String>.into("")
   | |         ^^^^^^^^^^^^^^- help: use the path separator to refer to an item: `::`
LL | |
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `create!`
...
LL |       let _ = create!();
   |               --------- in this macro invocation

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0423`.
